--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "nodemon": "^3.1.7",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5"
   }
