--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Um sistema para gerenciar uma rifa.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
-    "nodemon": "^3.1.7",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pg": "^8.13.1",
